ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__config_chinese_switch_off.snap
---
source: ash-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame
---
  .                                                                               [— / —] [仪 表 盘 ]  
                                                                                                    
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │         ┌── 配 置  ─────────────────────────────────────────────────────────────[✗]─┐          │  
  │    ▄  ▄ │                                                                         │          │  
  │  ▗█▛██▜█│   通 用     提 供 商     议 题                                                 │          │  
  │  ▝▜████▛│                                                                         │          │  
  │    ▝  ▘ │  ╭────────────────────────────────────────────────────────────────────╮ │          │  
  │         │  │ 搜 索 配 置                                                            │ │          │  
  │         │  ╰────────────────────────────────────────────────────────────────────╯ │          │  
  │         │> Vim 模 式                                                           关 闭  │          │  
  │         │> 内 存 诊 断                                                           关 闭  │          │  
  │         │> 自 动 更 新                                                           最 新  │          │  
  │         │> 以 差 异 显 示  Git 更 改                                                关 闭  │          │  
  ╰─────────│> 语 言                                                               中 文  │──────────╯  
            │> 状 态 栏 风 格                                                         简 洁  │             
            │> 按 键 提 示 风 格                                                       对 比  │             
            │> 屏 幕 模 式                                                     fullscreen │             
            │> 记 忆                                                               关 闭  │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │ · Esc 返 回   
  ╭─────────│  Enter 更 改  · r 重 置  · ←/→ 详 情  · Tab 标 签 页  · / 搜 索  · Esc 关 闭         │──────────╮  
  │ > 构 建 任 └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰─────────────────────────────────────────────────────────────────────────────────── 自 动 模 型  ─╯
