ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__memories_inline_management.snap
---
source: ash-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
─ Memories ─────────────────────────────────────────────────────────────────────────────────────────
                                                                                                    
   Personal    Projects                                                                             
> + New Memory                                                                                      
  Memories off · c Config                                                                           
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮  
  │ Search this scope                                                                            │  
  ╰──────────────────────────────────────────────────────────────────────────────────────────────╯  
  No memories yet.                                                                                  
                                                                                                    
  Enter new · ↓ search · Tab tabs · Esc close
