ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__memories_management.snap
---
source: ash-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Memories ─────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Personal    Projects    Directories                                   │             
            │                                                                         │             
            │  Personal memories · Memories off · c Config                            │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Search this scope                                                  │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │  No memories in this scope. Press n to add one.                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│  Enter view · n new · a actions · Tab tabs · / search · Esc close       │──────────╮  
  │ > backgr└─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
