ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__memories_unsaved_draft.snap
---
source: ash-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Memories › Unsaved changes ───────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │  Offline                                                                │             
            │                                                                         │             
            │> Continue editing                                                       │             
            │  Discard changes                                                        │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│  Enter select · Esc back                                                │──────────╮  
  │ > backgr└─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
