ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__modal_search_with_background_question.snap
---
source: ash-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Config ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   General    Providers    Issues                                        │             
            │                                                                         │             
            │  ╭────────────────────────────────────────────────────────────────────╮ │             
            │  │ Screen mode                                                        │ │             
            │  ╰────────────────────────────────────────────────────────────────────╯ │             
            │> Screen mode                                                 fullscreen │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
┌Question  (│                                                                         │────────────┐
│Choose an o│                                                                         │            │
│> Continue │                                                                         │            │
│  Type your│                                                                         │            │
│           │                                                                         │            │
└───────────│                                                                         │────────────┘
            │                                                                         │             
  ╭─────────│  Enter/Esc/Ctrl+C to return  ·  Tab/Shift+Tab to switch                 │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
